--- a/index.html
+++ b/index.html
@@ -1,5 +1,23 @@
 <html lang="en">
+<head>
+	<link rel="stylesheet" href="index.css">
+</head>
 <body>
-<h1> Breath Extensions</h1>
+<!--<h1> Breath </h1>-->
+<div>
+	<div id="hint"></div>
+	<div id="count"></div>
+	<div id="countShape">
+		<!--		<span></span>-->
+	</div>
+
+	<input type="number" value="4"/>
+
+	<button id="square">square</button>
+	<button id="triangle">triangle</button>
+	<button id="circle">line</button>
+
+</div>
+<script src="breath.js"></script>
 </body>
 </html>
