--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<div class="bar-wrapper">
 		<div id="bar"></div>
-		<div class=""></div>
+		<div id="start">Start</div>
 		<div id="hint"></div>
 		<div id="count"></div>
 	</div>
@@ -26,6 +26,7 @@
 				<span class="line"></span>
 				<span class="line"></span>
 				<span class="line"></span>
+				</span>
 			</div>
 			<div class="time-setting">
 				<span id="minus">-</span>
