import svg icons

--- a/index.html
+++ b/index.html
@@ -36,9 +36,29 @@
 
 		</div>
 
-		<button class="breath-type" id="square">square</button>
-		<button class="breath-type" id="triangle">triangle</button>
-		<button class="breath-type" id="line">line</button>
+		<button class="breath-type" id="square">
+			square
+			<svg width="35" height="34" viewBox="0 0 35 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<rect x="3.4679" y="31.4883" width="28.3959" height="28.3959" transform="rotate(-90 3.4679 31.4883)"
+					  stroke="#6AC2E6" stroke-width="5"/>
+			</svg>
+
+		</button>
+		<button class="breath-type" id="triangle">
+			triangle
+			<svg width="37" height="32" viewBox="0 0 37 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path d="M4.86826 28.9188L18.6659 5.0206L32.4635 28.9188H4.86826Z" stroke="#B06AE6" stroke-width="5"/>
+			</svg>
+
+		</button>
+		<button class="breath-type" id="line">
+			line
+			<svg width="35" height="34" viewBox="0 0 35 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<circle cx="17.6658" cy="17.0047" r="14.1979" transform="rotate(-90 17.6658 17.0047)" stroke="#B06AE6"
+						stroke-width="5"/>
+			</svg>
+
+		</button>
 
 	</div>
 
